crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_simple_q1_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q1"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_orderkey)]]                                                                                                                                                                |
|               |   TableScan: lineitem projection=[l_orderkey]                                                                                                                                                                             |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[max(lineitem.l_orderkey)]                                                                                                                                                        |
|               |   CoalescePartitionsExec                                                                                                                                                                                                  |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[max(lineitem.l_orderkey)]                                                                                                                                                  |
|               |       SchemaCastScanExec                                                                                                                                                                                                  |
|               |         BytesProcessedExec                                                                                                                                                                                                |
|               |           DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |                                                                                                                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
