crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_simple_q2_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q2"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                              |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: lineitem.l_linenumber                                                                                                 |
|               |   Inner Join: lineitem.l_linenumber = __scalar_sq_1.max(lineitem.l_linenumber)                                                    |
|               |     TableScan: lineitem projection=[l_linenumber]                                                                                 |
|               |     SubqueryAlias: __scalar_sq_1                                                                                                  |
|               |       Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_linenumber)]]                                                                |
|               |         TableScan: lineitem projection=[l_linenumber]                                                                             |
| physical_plan | HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(max(lineitem.l_linenumber)@0, l_linenumber@0)], projection=[l_linenumber@1] |
|               |   AggregateExec: mode=Final, gby=[], aggr=[max(lineitem.l_linenumber)]                                                            |
|               |     CoalescePartitionsExec                                                                                                        |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[max(lineitem.l_linenumber)]                                                      |
|               |         SchemaCastScanExec                                                                                                        |
|               |           BytesProcessedExec                                                                                                      |
|               |             DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                           |
|               |   SchemaCastScanExec                                                                                                              |
|               |     BytesProcessedExec                                                                                                            |
|               |       DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                 |
|               |                                                                                                                                   |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------+
