crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_simple_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                     |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: lineitem.l_quantity DESC NULLS FIRST, fetch=10                                                                                     |
|               |   Projection: avg(lineitem.l_tax), lineitem.l_linenumber, lineitem.l_quantity                                                            |
|               |     Aggregate: groupBy=[[lineitem.l_linenumber, lineitem.l_quantity]], aggr=[[avg(CAST(lineitem.l_tax AS Float64))]]                     |
|               |       TableScan: lineitem projection=[l_linenumber, l_quantity, l_tax]                                                                   |
| physical_plan | SortPreservingMergeExec: [l_quantity@2 DESC], fetch=10                                                                                   |
|               |   SortExec: TopK(fetch=10), expr=[l_quantity@2 DESC], preserve_partitioning=[true]                                                       |
|               |     ProjectionExec: expr=[avg(lineitem.l_tax)@2 as avg(lineitem.l_tax), l_linenumber@0 as l_linenumber, l_quantity@1 as l_quantity]      |
|               |       AggregateExec: mode=FinalPartitioned, gby=[l_linenumber@0 as l_linenumber, l_quantity@1 as l_quantity], aggr=[avg(lineitem.l_tax)] |
|               |         RepartitionExec: partitioning=Hash([l_linenumber@0, l_quantity@1], 16), input_partitions=16                                      |
|               |           AggregateExec: mode=Partial, gby=[l_linenumber@0 as l_linenumber, l_quantity@1 as l_quantity], aggr=[avg(lineitem.l_tax)]      |
|               |             SchemaCastScanExec                                                                                                           |
|               |               BytesProcessedExec                                                                                                         |
|               |                 DataSourceExec: partitions=16, partition_sizes=[<redacted>]          |
|               |                                                                                                                                          |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------+
