crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_tpch_simple_q5_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q5"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                           |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: total_price DESC NULLS FIRST                                                                                                                                             |
|               |   Projection: sum(o.o_totalprice) AS total_price, l.l_linestatus                                                                                                               |
|               |     Aggregate: groupBy=[[l.l_linestatus]], aggr=[[sum(o.o_totalprice)]]                                                                                                        |
|               |       Projection: o.o_totalprice, l.l_linestatus                                                                                                                               |
|               |         Inner Join: o.o_orderkey = l.l_orderkey                                                                                                                                |
|               |           SubqueryAlias: o                                                                                                                                                     |
|               |             TableScan: orders projection=[o_orderkey, o_totalprice]                                                                                                            |
|               |           SubqueryAlias: l                                                                                                                                                     |
|               |             TableScan: lineitem projection=[l_orderkey, l_linestatus]                                                                                                          |
| physical_plan | SortPreservingMergeExec: [total_price@0 DESC]                                                                                                                                  |
|               |   ProjectionExec: expr=[sum(o.o_totalprice)@1 as total_price, l_linestatus@0 as l_linestatus]                                                                                  |
|               |     SortExec: expr=[sum(o.o_totalprice)@1 DESC], preserve_partitioning=[true]                                                                                                  |
|               |       AggregateExec: mode=FinalPartitioned, gby=[l_linestatus@0 as l_linestatus], aggr=[sum(o.o_totalprice)]                                                                   |
|               |         RepartitionExec: partitioning=Hash([l_linestatus@0], 16), input_partitions=16                                                                                          |
|               |           AggregateExec: mode=Partial, gby=[l_linestatus@1 as l_linestatus], aggr=[sum(o.o_totalprice)]                                                                        |
|               |             HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@0, l_orderkey@0)], projection=[o_totalprice@1, l_linestatus@3] |
|               |               RepartitionExec: partitioning=Hash([o_orderkey@0], 16), input_partitions=16                                                                                      |
|               |                 SchemaCastScanExec                                                                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                           |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                |
|               |               RepartitionExec: partitioning=Hash([l_orderkey@0], 16), input_partitions=16                                                                                      |
|               |                 SchemaCastScanExec                                                                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                           |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                |
|               |                                                                                                                                                                                |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
